--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flexbox-sandbox",
   "version": "0.1.0",
   "private": true,
+  "main": "src/app/main.js",
   "devDependencies": {
     "react-scripts": "1.0.5"
   },
@@ -12,6 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "electron": "electron .",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
