--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "electron": "^1.6.8",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-syntax-highlighter": "^5.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
