--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "main": "src/app/main.js",
+  "homepage": "https://dunncl15.github.io/flex-sandbox",
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "1.0.5"
   },
   "dependencies": {
@@ -17,6 +19,8 @@
     "electron": "electron .",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
