--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "flexbox-sandbox",
   "version": "0.1.0",
   "private": true,
-  "main": "src/index.js",
-  "homepage": "https://dunncl15.github.io/flex-sandbox",
+  "main": "src/app/main.js",
   "devDependencies": {
-    "gh-pages": "^1.0.0",
     "react-scripts": "1.0.5"
   },
   "dependencies": {
@@ -19,8 +17,6 @@
     "electron": "electron .",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   }
 }
